updated multer in son

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="google-site-verification" content="sAs-CRIMVoRC7wiHH28LR09USsUjV35OJdp5mMUc4QI" />
   <title>Video to Audio Converter</title>
+   <meta name="description" content="Convert video to MP3 audio online for free. Supports MP4, MKV, MOV and more." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -29,6 +30,9 @@
     <button type="button" class="convert-btn" onclick="upload()" disabled>
       Convert to MP3
     </button>
+    <div class="progress-wrapper" id="progressWrapper">
+  <div class="progress-bar" id="progressBar"></div>
+</div>
 
     <div id="status"></div>
   </div>
