--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <meta name="google-site-verification" content="sAs-CRIMVoRC7wiHH28LR09USsUjV35OJdp5mMUc4QI" />
+
   <title>Video to Audio Converter</title>
-   <meta name="description" content="Convert video to MP3 audio online for free. Supports MP4, MKV, MOV and more." />
+  <meta name="description" content="Convert video to MP3 audio online for free. Supports MP4, MKV, MOV and more." />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 
 <body>
 
