index.html updated

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,16 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Search Console Verification -->
+  <!-- Google Search Console -->
   <meta name="google-site-verification" content="sAs-CRIMVoRC7wiHH28LR09USsUjV35OJdp5mMUc4QI" />
 
-  <!-- SEO TITLE -->
-  <title>Convert Video Under 50MB to Audio Online | Free MP3 Converter</title>
-
-  <!-- SEO DESCRIPTION -->
+  <!-- SEO -->
+  <title>Convert Video Under 50MB to Audio Online | Free MP3 Tool</title>
   <meta
     name="description"
-    content="Convert video files under 50MB to MP3 audio online for free. Fast video to audio converter for small videos, screen recordings, and clips."
+    content="Convert video files under 50MB to MP3 audio online for free. Fast video to audio converter for small videos and screen recordings."
   />
 
   <link rel="stylesheet" href="styles.css" />
@@ -51,40 +49,38 @@
 </main>
 
 <!-- ================= SEO CONTENT ================= -->
-<section style="max-width:700px;margin:40px auto;padding:0 16px;font-size:14px;line-height:1.6;color:#475569;">
+<section style="max-width:700px;margin:40px auto 20px;padding:0 16px;font-size:14px;line-height:1.6;color:#475569;">
   <h2>Convert Small Video Files to Audio</h2>
   <p>
-    This free online tool allows you to convert video files under 50MB into
-    high-quality MP3 audio. It is optimized for small videos to ensure
-    faster and more reliable conversion.
+    This free tool allows you to convert video files under 50MB into
+    high-quality MP3 audio. It is optimized for fast and reliable
+    conversion of small videos.
   </p>
 
   <h2>Why Use a 50MB Video to Audio Converter?</h2>
   <p>
-    Smaller video files convert faster and work better on online tools.
-    This converter is ideal for short clips, screen recordings, lecture videos,
-    and presentations under 50MB.
+    Smaller video files convert faster and work more reliably on online tools.
+    This converter is ideal for screen recordings, lectures, short clips,
+    and presentations.
   </p>
 
-  <h3>Common Use Cases</h3>
   <ul>
-    <li>Convert screen recordings to audio</li>
+    <li>Convert screen recordings to MP3</li>
     <li>Extract audio from short video clips</li>
-    <li>Convert lecture videos under 50MB</li>
-    <li>Fast MP3 conversion without signup</li>
+    <li>No signup required</li>
+    <li>Files processed temporarily</li>
   </ul>
 
-  <p style="font-size:12px;color:#64748b;margin-top:16px;">
-    ⚠️ This tool is intended for converting video files that you own or have
-    permission to use. Users are responsible for complying with copyright laws.
+  <p style="font-size:12px;color:#64748b;margin-top:12px;">
+    ⚠️ Convert only videos you own or have permission to use.
   </p>
 </section>
 
 <!-- ================= FOOTER ================= -->
 <footer class="footer">
-  <a href="#" onclick="openModal('aboutModal')">About</a>
-  <a href="#" onclick="openModal('privacyModal')">Privacy Policy</a>
-  <a href="#" onclick="openModal('contactModal')">Contact</a>
+  <a href="javascript:void(0)" onclick="openModal('aboutModal')">About</a>
+  <a href="javascript:void(0)" onclick="openModal('privacyModal')">Privacy Policy</a>
+  <a href="javascript:void(0)" onclick="openModal('contactModal')">Contact</a>
 </footer>
 
 <!-- ================= MODALS ================= -->
@@ -92,7 +88,7 @@
 <div class="modal" id="aboutModal">
   <div class="modal-content">
     <span class="close" onclick="closeModal('aboutModal')">&times;</span>
-    <h2>About Us</h2>
+    <h2>About</h2>
     <p>
       This video to audio converter helps users extract MP3 audio from
       small video files under 50MB.
@@ -109,11 +105,11 @@
     <span class="close" onclick="closeModal('privacyModal')">&times;</span>
     <h2>Privacy Policy</h2>
     <p>
-      Uploaded files are processed temporarily for conversion purposes
-      and are deleted automatically after processing.
+      Uploaded files are processed temporarily for conversion and are deleted
+      automatically after processing.
     </p>
     <p>
-      We do not collect personal information such as name, email, or phone number.
+      No personal data such as email or name is collected.
     </p>
   </div>
 </div>
@@ -122,7 +118,9 @@
   <div class="modal-content">
     <span class="close" onclick="closeModal('contactModal')">&times;</span>
     <h2>Contact</h2>
-    <p>For questions or feedback, contact us at:</p>
+    <p>
+      For feedback or questions, reach us at:
+    </p>
     <p><b>Email:</b> shockytipps@gmail.com</p>
   </div>
 </div>
